SSL fonctionne et application fonctionnel choix ip a ajouter, MAJ interface web a faire : listes des zip pour restauration zip, selection des extentions pour sauv.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,16 @@ server.port=8081
 
 
 # Keystore configuration
-server.ssl.key-store=classpath:SSL/server.keystore.jks
-server.ssl.key-store-password=furryfurry
-server.ssl.keyStoreType=JKS
+#server.ssl.key-store=classpath:SSL/server.keystore.jks
+#server.ssl.key-store-password=furryfurry
+#server.ssl.keyStoreType=JKS
 
 
 # Truststore configuration
-server.ssl.trust-store=classpath:SSL/client.truststore.jks
-server.ssl.trust-store-password=furryfurry
-server.ssl.trustStoreType=JKS
+#server.ssl.trust-store=classpath:SSL/client.truststore.jks
+#server.ssl.trust-store-password=furryfurry
+#server.ssl.trustStoreType=JKS
+
+
+java -Djavax.net.debug=ssl,handshake -jar your-application.jar
+
