--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,14 @@ server.port=8081
 #server.ssl.trustStoreType=JKS
 
 
-java -Djavax.net.debug=ssl,handshake -jar your-application.jar
+#java -Djavax.net.debug=ssl,handshake -jar your-application.jar
+
+
+spring.security.oauth2.client.registration.keycloak.client-id=sauvgarde
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/Sae-Services
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/Sae-Services
 
